initial setup of sidebar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,61 @@
 </head>
 <body>
     <div class="container">
-        <header>Header</header>
-        <div class="sidebar">Sidebar</div>
+        <header>
+           
+        </header>
+        <div class="sidebar">
+            
+            <div class="logo"> 
+                <img src="./assets/img/dashboard.png" alt=""> 
+                Dashboard
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Home</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="">Profile</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Messages</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">History</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Tasks</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Communities</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Settings</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Support</a>
+            </div>
+
+            <div class="sidebar-link">
+                <img src="#" alt="#">
+                <a href="#">Privacy</a>
+            </div>
+        </div>
         <div class="main-content">Main Content</div>
     </div>
 </body>
