styled the sidebar

--- a/index.html
+++ b/index.html
@@ -17,56 +17,56 @@
         <header>
            
         </header>
+
         <div class="sidebar">
 
-            <div class="logo"> 
-                <img src="./assets/img/dashboard.png" alt=""> 
-                Dashboard
+            <div class="sidebar-top">
+                <div class="sidebar-link">
+                    <img class="logo" src="./assets/img/layout.png" alt="">
+                    Dashboard
+                </div>
             </div>
 
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Home</a>
+            <div class="sidebar-middle">
+                <div class="sidebar-link">
+                    <img src="./assets/img/home.png" alt="#">
+                    <a href="#">Home</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="./assets/img/user.png" alt="#">
+                    <a href="">Profile</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="./assets/img/chat.png" alt="#">
+                    <a href="#">Messages</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="./assets/img/refresh.png" alt="#">
+                    <a href="#">History</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="./assets/img/list.png" alt="#">
+                    <a href="#">Tasks</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="./assets/img/team.png" alt="#">
+                    <a href="#">Communities</a>
+                </div>
             </div>
 
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="">Profile</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Messages</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">History</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Tasks</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Communities</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Settings</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Support</a>
-            </div>
-
-            <div class="sidebar-link">
-                <img src="#" alt="#">
-                <a href="#">Privacy</a>
+            <div class="sidebar-bottom">
+                <div class="sidebar-link">
+                    <img src="./assets/img/settings.png" alt="#">
+                    <a href="#">Settings</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="#" alt="#">
+                    <a href="#">Support</a>
+                </div>
+                <div class="sidebar-link">
+                    <img src="#" alt="#">
+                    <a href="#">Privacy</a>
+                </div>
             </div>
         </div>
         <div class="main-content">Main Content</div>
