--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
     <div class="container">
         <header>
-           
+           <div class="search-bar">
+               <img src="" alt="">
+           </div>
+
+           <div class="profile-links">
+               <img src="" alt="" class="notification-img">
+               <img src="" alt="" class="profile-img">
+               Kenneth Imade
+           </div>
         </header>
 
         <div class="sidebar">
@@ -69,7 +77,10 @@
                 </div>
             </div>
         </div>
-        <div class="main-content">Main Content</div>
+        <div class="main-content">
+            Main Content
+
+        </div>
     </div>
 </body>
 </html>
