added support and privacy icons

--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
                     <a href="#">Settings</a>
                 </div>
                 <div class="sidebar-link">
-                    <img src="#" alt="#">
+                    <img src="./assets/img/support.png" alt="#">
                     <a href="#">Support</a>
                 </div>
                 <div class="sidebar-link">
-                    <img src="#" alt="#">
+                    <img src="./assets/img/padlock.png" alt="#">
                     <a href="#">Privacy</a>
                 </div>
             </div>
         </div>
         <div class="main-content">
             Main Content
-
         </div>
     </div>
 </body>
