added header assets

--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
 <body>
     <div class="container">
         <header>
-           <div class="search-bar">
-               <img src="" alt="">
+           <div class="header-top">
+               <div class="search-bar">
+                   <img src="./assets/img/loupe.png" alt="search-icon">
+                   <input type="text"   placeholder="type to search...">
+               </div>
+               <div class="profile-links">
+                   <img src="./assets/img/bell.png" alt="" class="notification-img">
+                   <img src="" alt="" class="profile-img">
+                   <p>Dev Ken</p>
+               </div>
            </div>
 
-           <div class="profile-links">
-               <img src="" alt="" class="notification-img">
-               <img src="" alt="" class="profile-img">
-               Kenneth Imade
+           <div class="header-bottom">
+               <div>
+                   <img src="" alt="profile-image" class="profile-img-lg">
+                   <p>Hi there,</p>
+                   <p>Dev Ken (@kenthedev)</p>
+               </div>
+
+               <div>
+                   <button>New</button>
+                   <button>Upload</button>
+                   <button>Share</button>
+               </div>
            </div>
         </header>
 
