--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         <header>
            <div class="header-top">
                <div class="search-bar">
-                   <img src="./assets/img/loupe.png" alt="search-icon">
+                   <div class="img-box">
+                       <img src="./assets/img/loupe.png" alt="search-icon" class="search-icon">
+                    </div>
                    <input type="text"   placeholder="type to search...">
                </div>
                <div class="profile-links">
-                   <img src="./assets/img/bell.png" alt="" class="notification-img">
+                   <div class="img-box">
+                       <img src="./assets/img/bell.png" alt="" class="notification-img">
+                    </div>
                    <img src="" alt="" class="profile-img">
                    <p>Dev Ken</p>
                </div>
