designed search box

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <div class="container">
         <header>
            <div class="header-top">
-               <div class="search-bar">
+               
+               <div class="search-box">
                    <div class="img-box">
                        <img src="./assets/img/loupe.png" alt="search-icon" class="search-icon">
                     </div>
-                   <input type="text"   placeholder="type to search...">
+                   <input type="text"   placeholder="type to search..." id="search-bar">
                </div>
+
                <div class="profile-links">
                    <div class="img-box">
                        <img src="./assets/img/bell.png" alt="" class="notification-img">
