--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
            <div class="header-top">
-               
+
                <div class="search-box">
                    <div class="img-box">
                        <img src="./assets/img/loupe.png" alt="search-icon" class="search-icon">
@@ -28,7 +28,7 @@
                    <div class="img-box">
                        <img src="./assets/img/bell.png" alt="" class="notification-img">
                     </div>
-                   <img src="" alt="" class="profile-img">
+                   <img src="./assets/img/batman.jpg" alt="" class="profile-img">
                    <p>Dev Ken</p>
                </div>
            </div>
