--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
            </div>
 
            <div class="header-bottom">
-               <div>
-                   <img src="" alt="profile-image" class="profile-img-lg">
-                   <p>Hi there,</p>
-                   <p>Dev Ken (@kenthedev)</p>
+               <div class="welcome-msg">
+                   <div class="profile-img-box">
+                       <img src="./assets/img/batman.jpg" alt="profile-image" class="profile-img-lg">
+                    </div>
+                   <div class="msg">
+                       <p>Hi there,</p>
+                       <p>Dev Ken (@kenthedev)</p>
+                   </div>
                </div>
 
                <div>
