setup user profile welcome message box

--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
                        <img src="./assets/img/bell.png" alt="" class="notification-img">
                     </div>
                    <img src="./assets/img/batman.jpg" alt="" class="profile-img">
-                   <p>Dev Ken</p>
+                   <p>Kenneth Imade</p>
                </div>
            </div>
 
            <div class="header-bottom">
                <div class="welcome-msg">
-                   <div class="profile-img-box">
-                       <img src="./assets/img/batman.jpg" alt="profile-image" class="profile-img-lg">
-                    </div>
+                   <img src="./assets/img/batman.jpg" alt="profile-image" class="profile-img-lg">
                    <div class="msg">
                        <p>Hi there,</p>
-                       <p>Dev Ken (@kenthedev)</p>
+                       <p>Kenneth Imade (@kenthedev)</p>
                    </div>
                </div>
 
