--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                    </div>
                </div>
 
-               <div>
-                   <button>New</button>
-                   <button>Upload</button>
-                   <button>Share</button>
+               <div class="btn-box">
+                   <button class="action-btn">New</button>
+                   <button class="action-btn">Upload</button>
+                   <button class="action-btn">Share</button>
                </div>
            </div>
         </header>
