--- a/index.html
+++ b/index.html
@@ -102,7 +102,81 @@
             </div>
         </div>
         <div class="main-content">
-            Main Content
+            <div class="left-content">
+                <h4>My Projects</h4>
+                <div class="cards">
+                    <div class="project-card">
+                        <h4 class="card-title">Super Cool Project</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h4 class="card-title">Less Cool Project</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h4 class="card-title">Impossible App</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h4 class="card-title">Easy Peasy App</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h4 class="card-title">Ad Blocker</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <h4 class="card-title">Money Maker</h4>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                        </p>
+                        <div class="actions">
+                            <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/cards-heart-outline.png" alt="like-icon"></a></span>
+                            <span class="material-icons"><a href="#"><img src="./assets/img/source-fork.png" alt="fork-icon"></a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-content">
+                <h4>Announcements</h4>
+                <h4>Trending</h4>
+            </div>
         </div>
     </div>
 </body>
