styled project cards

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="project-card">
                         <h4 class="card-title">Easy Peasy App</h4>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus risus, tempus ut facilisis quis, ultricies non mi. Vivamus a lacinia felis, sed iaculis elit.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                         </p>
                         <div class="actions">
                             <span class="material-icons"><a href="#"><img src="./assets/img/star-plus-outline.png" alt="favorite-icon"></a></span>
