desigend announcement cards

--- a/index.html
+++ b/index.html
@@ -174,8 +174,35 @@
                 </div>
             </div>
             <div class="right-content">
-                <h4>Announcements</h4>
-                <h4>Trending</h4>
+                <div class="announcements">
+                    <h4>Announcements</h4>
+                    <div class="cards">
+                        <div class="news-card">
+                            <h5 class="news-title">Nobody Above Breakfast</h5>
+                            <p class="news-text">
+                                This is a reminder to tell you that, nobody is above breakfast. Shine your eye make you no go chop meal wey you no pay for.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="news-card">
+                            <h5 class="news-title">Batman has come out!!</h5>
+                            <p class="news-text">
+                                The Batman has come out go and watch it. Problem no dey finish.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="news-card">
+                            <h5 class="news-title">God is good!!!</h5>
+                            <p class="news-text">
+                                Just a reminder that the Lord is good
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="trending">
+                    <h4>Trending</h4>
+                </div>
             </div>
         </div>
     </div>
