trending card initial setup

--- a/index.html
+++ b/index.html
@@ -202,6 +202,28 @@
 
                 <div class="trending">
                     <h4>Trending</h4>
+                    <div class="cards">
+                        <div class="trend-card">
+                            <img src="./assets/img/profile2.png" alt="profile-image" class="trend-img">
+                            <p>@kenthedev</p>
+                            <p></p>
+                        </div>
+                        <div class="trend-card">
+                            <img src="./assets/img/profile1.png" alt="profile-image" class="trend-img">
+                            <p>@nagode</p>
+                            <p></p>
+                        </div>
+                        <div class="trend-card">
+                            <img src="./assets/img/profile3.png" alt="profile-image" class="trend-img">
+                            <p>@nftbear</p>
+                            <p></p>
+                        </div>
+                        <div class="trend-card">
+                            <img src="./assets/img/profile4.png" alt="profile-image" class="trend-img">
+                            <p>@masterdev</p>
+                            <p></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
