changed user profile images

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                    <div class="img-box">
                        <img src="./assets/img/bell.png" alt="" class="notification-img">
                     </div>
-                   <img src="./assets/img/batman.jpg" alt="" class="profile-img">
+                   <img src="./assets/img/profile2.png" alt="" class="profile-img">
                    <p>Kenneth Imade</p>
                </div>
            </div>
 
            <div class="header-bottom">
                <div class="welcome-msg">
-                   <img src="./assets/img/batman.jpg" alt="profile-image" class="profile-img-lg">
+                   <img src="./assets/img/profile2.png" alt="profile-image" class="profile-img-lg">
                    <div class="msg">
                        <p>Hi there,</p>
                        <p>Kenneth Imade (@kenthedev)</p>
