finished design of trending cards

--- a/index.html
+++ b/index.html
@@ -205,23 +205,31 @@
                     <div class="cards">
                         <div class="trend-card">
                             <img src="./assets/img/profile2.png" alt="profile-image" class="trend-img">
-                            <p>@kenthedev</p>
-                            <p></p>
+                            <div class="user-info">
+                                <p>@kenthedev</p>
+                                <p>Kenneth Imade</p>
+                            </div>
                         </div>
                         <div class="trend-card">
                             <img src="./assets/img/profile1.png" alt="profile-image" class="trend-img">
-                            <p>@nagode</p>
-                            <p></p>
+                            <div class="user-info">
+                                <p>@nagode</p>
+                                <p>Anime Boyz</p>
+                            </div>
                         </div>
                         <div class="trend-card">
                             <img src="./assets/img/profile3.png" alt="profile-image" class="trend-img">
-                            <p>@nftbear</p>
-                            <p></p>
+                            <div class="user-info">
+                                <p>@nftbear</p>
+                                <p>NFT DEV</p>
+                            </div>
                         </div>
                         <div class="trend-card">
                             <img src="./assets/img/profile4.png" alt="profile-image" class="trend-img">
-                            <p>@masterdev</p>
-                            <p></p>
+                            <div class="user-info">
+                                <p>@masterdev</p>
+                                <p>WAGMI</p>
+                            </div>
                         </div>
                     </div>
                 </div>
